# agentic-harness

./: .gitignore  README.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: M0-REPORT.md
docs/superpowers/specs/: 2026-06-11-run-progress-observability-design.md
examples/: __init__.py  abc.py  live_graph.py
examples/scenario_a/: __init__.py  expected_events.json  expected_facts.json  fixture_server.py  record_golden.py  runner.py
reports/m0/: bench.json  chaos.json  claim-throughput.json
tests/: conftest.py  test_dsl_models.py  test_scaffold_contract.py  test_validate.py
tests/api/: test_api.py
tests/bench/: test_transition_overhead.py
tests/cli/: test_cli.py
tests/durability/: test_eventlog.py  test_migrate.py  test_postgres_backend.py  test_queue.py
tests/engine/: test_executor_basic.py  test_executor_retry.py  test_lifecycle.py  test_retry.py
tests/examples/: test_abc_example.py  test_live_graph_example.py
tests/m0/: __init__.py  bench.py  chaos.py  probe_service.py  refgraph.py  runner.py  test_bench.py  test_chaos.py  test_refgraph_runner.py
tests/models/: test_anthropic.py  test_gateway.py  test_openai_compat.py  test_structured.py
tests/plugins/: test_loader.py
tests/scenario_a/: test_replay.py
tests/testing/: test_cassettes.py
tests/tools/: test_mcp_adapter.py  test_registry.py
