[project]
name = "agentic-harness-workspace"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30.0",
  "fastapi>=0.128.0",
  "harness",
  "httpx[http2]>=0.28.0",
  "orjson>=3.10.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pyyaml>=6.0.2",
  "structlog>=24.0.0",
]

[tool.uv.sources]
harness = { workspace = true }

[dependency-groups]
dev = [
  "hypothesis>=6.100.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.22.0",
  "ruff>=0.6.0",
  "types-PyYAML>=6.0.12.20250516",
]

[tool.uv.workspace]
members = ["packages/harness"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["packages/harness"]
markers = [
  "live: real LLM or external provider tests",
  "chaos: crash and fault-injection tests",
  "bench: benchmark and performance gate tests",
  "soak: long-running soak tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["harness"]

[[tool.mypy.overrides]]
module = ["asyncpg.*", "asyncpg"]
ignore_missing_imports = true
